# view_selection_tool_dbt

./: .gitignore  .gitlab-ci.yml  .user.yml  README.md  dbt_project.yml  noxfile.py  packages.yml  pyproject.toml  selectors.yml
CI/: data_monitoring_metrics.csv  dbt_invocations.csv  dbt_models.csv  dbt_run_results.csv  temp.py  temp_db.py
Classes/: DbtProjectHandler.py  dbtModel.py
macros/: check_var.sql
models/marts/: all_models_plus_code.sql  model_dependencies.sql
models/staging/: sources.yml  stg_dbt_models.sql
view_selection_tool/: dbt_project.yml  packages.yml  profiles.yml
view_selection_tool/models/marts/: all_models_plus_code.sql  avg_maintenance_fractions.sql  destination_nodes.sql  fct_destination_nodes.sql  fct_model_dependencies.sql  last_invocation_id.sql  last_invocation_id_with_total_runtime.sql  model_dependencies.sql
view_selection_tool/models/staging/: sources.yml  stg_data_monitoring_metrics.sql  stg_dbt_invocations.sql  stg_dbt_models.sql  stg_dbt_run_results.sql
