[tool.poetry]
name = "view-selection-plugin"
version = "0.1.0"
description = ""
authors = ["BramReinders <b.reinders@student.tue.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.5"
psycopg2-binary = "^2.9.3"
dbt-core = "^1.6.0"
dbt-postgres = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
