[tool.poetry]
name = "view-selection-plugin"
version = "0.1.0"
description = ""
authors = ["BramReinders <b.reinders@student.tue.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.5"
psycopg2-binary = "^2.9.3"
dbt-core = "^1.6.0"
dbt-postgres = "^1.6.0"

[tool.poetry.group.dev.dependencies]
sqlfluff = "^2.0.7"
sqlfluff-templater-dbt = "^2.0.2"
black = "^23.10.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.sqlfluff.core]
templater = 'dbt'
max_line_length = 200

[tool.sqlfluff.templater.dbt]
project_dir = './view_selection_tool/'
profiles_dir = "./view_selection_tool/"
